--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "babel-preset-react": "^6.24.1",
         "babel-preset-react-hmre": "^1.1.1",
         "webpack": "^4.4.1",
-        "webpack-cli": "^2.0.13",
+        "webpack-cli": "2.0.13",
         "webpack-dev-server": "^3.1.1",
         "webpack-merge": "^4.1.2"
     }
